# Chemical_info_app

./: main.py  pyproject.toml
